--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -14,7 +14,7 @@ dependencies {
     api 'com.azure:azure-core:1.35.0'
     api 'com.squareup.okhttp3:okhttp:4.10.0'
 
-    implementation 'com.microsoft.kiota:microsoft-kiota-abstractions:0.4.2'
+    api 'com.microsoft.kiota:microsoft-kiota-abstractions:0.4.2'
     implementation 'com.microsoft.kiota:microsoft-kiota-authentication-azure:0.4.2'
     implementation 'com.microsoft.kiota:microsoft-kiota-http-okHttp:0.4.2'
     implementation 'com.microsoft.kiota:microsoft-kiota-serialization-json:0.4.2'
