--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -14,10 +14,10 @@ dependencies {
     api 'com.squareup.okhttp3:okhttp:4.10.0'
     api 'com.azure:azure-core:1.35.0'
 
-    api 'com.microsoft.kiota:microsoft-kiota-abstractions:0.1.2'
-    api 'com.microsoft.kiota:microsoft-kiota-authentication-azure:0.1.2'
-    api 'com.microsoft.kiota:microsoft-kiota-http-okHttp:0.1.2'
-    api 'com.microsoft.kiota:microsoft-kiota-serialization-json:0.1.2'
-    api 'com.microsoft.kiota:microsoft-kiota-serialization-text:0.1.2'
-    api 'com.microsoft.kiota:microsoft-kiota-serialization-form:0.1.2'
+api 'com.microsoft.kiota:microsoft-kiota-abstractions:0.4.2'
+implementation 'com.microsoft.kiota:microsoft-kiota-authentication-azure:0.4.2'
+implementation 'com.microsoft.kiota:microsoft-kiota-http-okHttp:0.4.2'
+implementation 'com.microsoft.kiota:microsoft-kiota-serialization-json:0.4.2'
+implementation 'com.microsoft.kiota:microsoft-kiota-serialization-text:0.4.2'
+implementation 'com.microsoft.kiota:microsoft-kiota-serialization-form:0.4.2'
 }
