--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -3,21 +3,21 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
-    testImplementation 'org.mockito:mockito-inline:5.0.0'
-
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
     compileOnly 'net.jcip:jcip-annotations:1.0'
-    compileOnly 'com.github.spotbugs:spotbugs-annotations:4.7.3'
+
+    api 'com.squareup.okhttp3:okhttp:4.10.0'
 
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    api 'com.squareup.okhttp3:okhttp:4.10.0'
-    api 'com.azure:azure-core:1.35.0'
+    api 'com.azure:azure-core:1.37.0'
+    api 'com.github.spotbugs:spotbugs-annotations:4.7.3'
 
-    api 'com.microsoft.kiota:microsoft-kiota-abstractions:0.1.2'
-    api 'com.microsoft.kiota:microsoft-kiota-authentication-azure:0.1.2'
-    api 'com.microsoft.kiota:microsoft-kiota-http-okHttp:0.1.2'
-    api 'com.microsoft.kiota:microsoft-kiota-serialization-json:0.1.2'
-    api 'com.microsoft.kiota:microsoft-kiota-serialization-text:0.1.2'
-    api 'com.microsoft.kiota:microsoft-kiota-serialization-form:0.1.2'
+    api 'com.microsoft.kiota:microsoft-kiota-abstractions:0.4.2'
+    implementation 'com.microsoft.kiota:microsoft-kiota-authentication-azure:0.4.2'
+    implementation 'com.microsoft.kiota:microsoft-kiota-http-okHttp:0.4.2'
+    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-json:0.4.2'
+    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-text:0.4.2'
+    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-form:0.4.2'
 }
