--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -3,7 +3,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
-    testImplementation 'org.mockito:mockito-inline:5.2.0'
+    //testImplementation 'org.mockito:mockito-inline:5.2.0'
+    implementation 'org.mockito:mockito-inline:5.2.0' //temp
+
     compileOnly 'net.jcip:jcip-annotations:1.0'
 
     implementation 'com.google.guava:guava:31.1-jre'
