- aligns policy with workflow definition change
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/.github/policies/msgraph-sdk-java-core-branch-protection.yml
+++ b/.github/policies/msgraph-sdk-java-core-branch-protection.yml
@@ -38,7 +38,7 @@ configuration:
     - license/cla
     - Build
     - lint-api-level
-    - Analyze
+    - Analyze (java)
     - build
     # Require branches to be up to date before merging. Requires requiredStatusChecks. boolean
     requiresStrictStatusChecks: false
@@ -76,7 +76,7 @@ configuration:
     - license/cla
     - Build
     - lint-api-level
-    - Analyze
+    - Analyze (java)
     - build
     # Require branches to be up to date before merging. Requires requiredStatusChecks. boolean
     requiresStrictStatusChecks: false
@@ -111,7 +111,7 @@ configuration:
     requiresLinearHistory: false
     # Required status checks to pass before merging. Values can be any string, but if the value does not correspond to any existing status check, the status check will be stuck on pending for status since nothing exists to push an actual status
     requiredStatusChecks:
-    - Analyze
+    - Analyze (java)
     - Build
     - build
     - license/cla
