--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -48,7 +48,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: 20
-        distribution: 'adopt'
+        distribution: 'temurin'
         cache: gradle
 
     # Initializes the CodeQL tools for scanning.
