--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 20
-          distribution: 'adopt'
+          distribution: 'temurin'
           cache: gradle     
       - name: Easy detect-secrets
         uses: RobertFischer/detect-secrets-action@v2.0.0
