--- a/.github/workflows/sample-build-check.yml
+++ b/.github/workflows/sample-build-check.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: 'adopt'
+        distribution: 'temurin'
         java-version: 20
     - name: Add execution right to the script
       run: chmod +x gradlew
@@ -28,7 +28,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: 'adopt'
+        distribution: 'temurin'
         java-version: 20
     - name: Add execution right to the script
       run: chmod +x gradlew
