--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 20
-          distribution: 'adopt'
+          distribution: 'temurin'
           cache: gradle   
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
