java level 8 for tests

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,9 @@ sourceSets {
 repositories {
     // You can declare any Maven/Ivy/file repository here.
     mavenCentral()
+    maven {
+        url "https://plugins.gradle.org/m2/" // Added for SonarQube
+    }
 }
 
 apply from: "gradle/dependencies.gradle"
