--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ sourceSets {
 repositories {
     // You can declare any Maven/Ivy/file repository here.
     mavenCentral()
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 apply from: "gradle/dependencies.gradle"
