--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -8,6 +8,8 @@ dependencies {
     implementation 'com.google.guava:guava:32.1.1-jre'
     implementation 'com.google.code.gson:gson:2.10.1'
 
+    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+
     api 'com.squareup.okhttp3:okhttp:4.11.0'
     api 'com.azure:azure-core:1.41.0'
     api 'com.github.spotbugs:spotbugs-annotations:4.7.3'
