--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -4,6 +4,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
     testImplementation 'org.mockito:mockito-inline:5.2.0'
+    testImplementation 'io.opentelemetry:opentelemetry-api:1.31.0'
+    testImplementation 'io.opentelemetry:opentelemetry-context:1.31.0'
+    testImplementation 'io.opentelemetry.semconv:opentelemetry-semconv:1.22.0-alpha'
+    testImplementation 'io.github.std-uritemplate:std-uritemplate:0.0.46'
     
     implementation 'com.google.guava:guava:32.1.3-jre'
     implementation 'com.google.code.gson:gson:2.10.1'
@@ -13,11 +17,11 @@ dependencies {
     api 'com.squareup.okhttp3:okhttp:4.12.0'
     api 'com.azure:azure-core:1.45.0'
 
-    api 'com.microsoft.kiota:microsoft-kiota-abstractions:0.8.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-authentication-azure:0.8.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-http-okHttp:0.8.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-json:0.8.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-text:0.8.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-text:0.8.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-form:0.8.0'
+    api 'com.microsoft.kiota:microsoft-kiota-abstractions:0.9.0'
+    implementation 'com.microsoft.kiota:microsoft-kiota-authentication-azure:0.9.0'
+    implementation 'com.microsoft.kiota:microsoft-kiota-http-okHttp:0.9.0'
+    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-json:0.9.0'
+    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-text:0.9.0'
+    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-text:0.9.0'
+    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-form:0.9.0'
 }
