Enum Refactor Release Candidate

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,8 +25,8 @@ mavenGroupId         = com.microsoft.graph
 mavenArtifactId      = microsoft-graph-core
 mavenMajorVersion    = 3
 mavenMinorVersion    = 0
-mavenPatchVersion    = 9
-mavenArtifactSuffix = 
+mavenPatchVersion    = 10
+mavenArtifactSuffix = RC
 
 #These values are used to run functional tests
 #If you wish to run the functional tests, edit the gradle.properties
