--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ mavenArtifactId      = microsoft-graph-core
 mavenMajorVersion    = 3
 mavenMinorVersion    = 0
 mavenPatchVersion    = 10
-mavenArtifactSuffix = RC
+mavenArtifactSuffix =
 
 #These values are used to run functional tests
 #If you wish to run the functional tests, edit the gradle.properties
