--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,11 +5,19 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  groups:
+    kiota-dependencies:
+      patterns:
+        - "*kiota*"
 - package-ecosystem: gradle
   directory: "/android"
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  groups:
+    kiota-dependencies:
+      patterns:
+        - "*kiota*"
 - package-ecosystem: gradle
   directory: "/samples/deviceCodeSample"
   schedule:
@@ -25,6 +33,10 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  groups:
+    kiota-dependencies:
+      patterns:
+        - "*kiota*"
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
@@ -36,18 +48,30 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  groups:
+    kiota-dependencies:
+      patterns:
+        - "*kiota*"
 - package-ecosystem: gradle
   directory: "/android"
   target-branch: v3/longTermBranch
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  groups:
+    kiota-dependencies:
+      patterns:
+        - "*kiota*"
 - package-ecosystem: maven
   directory: "/"
   target-branch: v3/longTermBranch
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  groups:
+    kiota-dependencies:
+      patterns:
+        - "*kiota*"
 - package-ecosystem: github-actions
   directory: "/"
   target-branch: v3/longTermBranch
