--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -2,7 +2,7 @@ name: Java CI with Gradle
 
 on:
   pull_request:
-    branches: [ dev, master, v3/longTermBranch ] 
+    branches: [ dev, master ]
     paths-ignore:
       - '.gradle/wrapper'
       - '.gitignore'
