--- a/.github/workflows/api-level-lint.yml
+++ b/.github/workflows/api-level-lint.yml
@@ -3,13 +3,9 @@ name: "Checks the SDK only using APIs from the targeted API level"
 on:
   workflow_dispatch:
   push:
-    branches:
-      - dev
-      - master
+    branches: [dev, master]
   pull_request:
-    branches:
-      - dev
-      - master
+    branches: [dev, master]
 
 jobs:
   lint-api-level:
