--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -2,9 +2,7 @@ name: Static analysis with SonarCloud
 on:
   workflow_dispatch:
   push:
-    branches:
-      - master
-      - dev
+    branches: [master, dev]
   pull_request:
     types: [opened, synchronize, reopened]
 
