Apply suggestions from code review
Co-authored-by: Philip Gichuhi <philipndiritu@gmail.com>

--- a/.github/workflows/api-level-lint.yml
+++ b/.github/workflows/api-level-lint.yml
@@ -3,7 +3,7 @@ name: "Checks the SDK only using APIs from the targeted API level"
 on:
   workflow_dispatch:
   push:
-    branches: [dev, master]
+    branches: [dev, master, support/2.x.x]
   pull_request:
     branches: [dev, master]
 
