--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -2,7 +2,7 @@ name: Build and Publish
 
 on:
   push:
-    branches: [dev, master]
+    branches: [dev, master, support/2.x.x]
     paths-ignore:
       - '.gradle/wrapper'
       - '.gitignore'
