--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -2,7 +2,7 @@ name: Java CI with Gradle
 
 on:
   pull_request:
-    branches: [dev, master]
+    branches: [dev, master, support/2.x.x]
     paths-ignore:
       - '.gradle/wrapper'
       - '.gitignore'
