--- a/.github/workflows/api-level-lint.yml
+++ b/.github/workflows/api-level-lint.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [dev, master, support/2.x.x]
   pull_request:
-    branches: [dev, master]
+    branches: [dev, master, support/2.x.x]
 
 jobs:
   lint-api-level:
