--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -16,7 +16,7 @@ on:
     branches: [dev, master, support/2.x.x]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [dev]
+    branches: [dev, support/2.x.x]
   schedule:
     - cron: '0 1 * * 4'
   workflow_dispatch:
