--- a/.github/workflows/conflicting-pr-label.yml
+++ b/.github/workflows/conflicting-pr-label.yml
@@ -7,10 +7,10 @@ name: PullRequestConflicting
 on:
   workflow_dispatch:
   push:
-    branches: [master, dev]
+    branches: [master, dev, support/2.x.x]
   pull_request:
     types: [synchronize]
-    branches: [master, dev]
+    branches: [master, dev, support/2.x.x]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
