--- a/.github/workflows/api-level-lint.yml
+++ b/.github/workflows/api-level-lint.yml
@@ -3,9 +3,9 @@ name: "Checks the SDK only using APIs from the targeted API level"
 on:
   workflow_dispatch:
   push:
-    branches: [dev, master, support/2.x.x]
+    branches: [main, support/2.x.x]
   pull_request:
-    branches: [dev, master, support/2.x.x]
+    branches: [main, support/2.x.x]
 
 jobs:
   lint-api-level:
@@ -31,4 +31,4 @@ jobs:
         with:
           name: lint-report
           path: ./android/build/reports
-      
+
