--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [dev, master, support/2.x.x]
+    branches: [main, support/2.x.x]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [dev, support/2.x.x]
+    branches: [main, support/2.x.x]
   schedule:
     - cron: '0 1 * * 4'
   workflow_dispatch:
@@ -24,8 +24,8 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
-    timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
+    runs-on: 'ubuntu-latest'
+    timeout-minutes: 10
     permissions:
       actions: read
       contents: read
