--- a/.github/workflows/git-release.yml
+++ b/.github/workflows/git-release.yml
@@ -5,7 +5,7 @@ on:
     tags:
     - "v[0-9]+.[0-9]+.[0-9]+"
   workflow_dispatch:
-  
+
 jobs:
   Git_Release:
     runs-on: ubuntu-latest
@@ -18,7 +18,7 @@ jobs:
         with:
           workflow: build-and-publish.yml
           workflow_conclusion: success
-          branch: master
+          branch: main
           event: push
           name: drop
           path: drop
