--- a/.github/workflows/git-release.yml
+++ b/.github/workflows/git-release.yml
@@ -23,13 +23,10 @@ jobs:
           name: drop
           path: drop
       - name: Github Release
-        uses: anton-yurchenko/git-release@v6.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
-          DRAFT_RELEASE: "false"
-          PRE_RELEASE: "false"
-          CHANGELOG_FILE: "CHANGELOG.md"
-          ALLOW_EMPTY_CHANGELOG: "true"
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          args: |
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fail_on_unmatched_files: true
+          files: |
             drop/build/**/*.jar
