Add release please config and version comments

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,9 +23,15 @@ org.gradle.jvmargs=-Xmx2g
 
 mavenGroupId         = com.microsoft.graph
 mavenArtifactId      = microsoft-graph-core
+# x-release-please-start-major
 mavenMajorVersion    = 3
+# x-release-please-end
+# x-release-please-start-minor
 mavenMinorVersion    = 1
+# x-release-please-end
+# x-release-please-start-patch
 mavenPatchVersion    = 10
+# x-release-please-end
 mavenArtifactSuffix =
 
 #These values are used to run functional tests
