--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,9 @@
 
     <groupId>com.microsoft.graph</groupId>
     <artifactId>microsoft-graph-core</artifactId>
-    <version>3.1.0</version>
+    <!--x-release-please-start-version-->
+    <version>3.1.10</version>
+    <!--x-release-please-end-->
     <packaging>pom</packaging>
 
     <properties>
