--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -2,13 +2,15 @@ name: Build and Publish
 
 on:
   push:
-    branches: [main, support/2.x.x]
+    branches: [main]
     paths-ignore:
       - '.gradle/wrapper'
       - '.gitignore'
       - 'LICENSE'
       - 'THIRD PARTY NOTICES'
       - '*.md'
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+"
 env:
   PREVIEW_TASK: publishSnapshotPublicationToSonatypeSnapshotRepository
   PUBLISH_TASK:  publishMavenCentralReleasePublicationToSonatypeRepository
@@ -47,7 +49,7 @@ jobs:
         run: ./gradlew $PREVIEW_TASK
 
   maven_Release:
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: startsWith(github.ref, 'refs/tags/')
     environment:
       name: maven_central_release
     runs-on: ubuntu-latest
