style: reverts auto-formatting disablement from #1623

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "java.configuration.updateBuildConfiguration": "automatic",
-    "java.format.enabled": false
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
