--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -15,6 +15,9 @@ env:
   PREVIEW_TASK: publishSnapshotPublicationToSonatypeSnapshotRepository
   PUBLISH_TASK:  publishMavenCentralReleasePublicationToSonatypeRepository
 
+permissions:
+  contents: write
+
 jobs:
   maven_Preview:
     if: ${{ github.ref == 'refs/heads/main' }}
@@ -94,4 +97,11 @@ jobs:
             gradle.properties
             **/gradle/**
             Scripts/**
+      - name: Github Release
+        uses: softprops/action-gh-release@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fail_on_unmatched_files: true
+          files: |
+            build/**/*.jar
 
