--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -22,6 +22,9 @@ jobs:
         run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew build
+      - name: Build with Java 8
+        working-directory: ./java-8
+        run: .././gradlew build
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4
         with:
