Add gradle-nexus publishing plugin and config

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'jacoco'
     id 'com.github.spotbugs' version '6.0.20'
     id "org.sonarqube" version "5.1.0.4882"
+    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
 }
 
 java {
@@ -90,10 +91,6 @@ sonarqube {
     }
 }
 
-//Publishing tasks-
-//Maven Central Snapshot: publishSnapshotPublicationToMavenRepository
-//Maven Central Release: publishMavenCentralReleasePublicationToMaven2Repository
-//Bintray Snapshot: publishSnapshotPublicationToMaven3Repository
 
 tasks.jar {
     manifest {
@@ -104,39 +101,11 @@ tasks.jar {
 publishing {
 
     publications {
-
-        maven(MavenPublication) {
-            groupId project.property('mavenGroupId')
-            artifactId project.property('mavenArtifactId')
-            version "${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}${mavenArtifactSuffix}"
-            from components.java
-            pom.withXml {
-                def root = asNode()
-                root.appendNode('name', 'Microsoft Graph Core SDK for Java')
-                root.appendNode('url', 'https://github.com/microsoftgraph/msgraph-sdk-java-core')
-                root.children().last() + pomConfig
-                def pomFile = file("${project.buildDir}/libs/microsoft-graph-core.pom")
-                writeTo(pomFile)
-            }
-
-        }
-        Snapshot(MavenPublication) {
+		maven(MavenPublication) {
         	customizePom(pom)
         	groupId project.property('mavenGroupId')
         	artifactId project.property('mavenArtifactId')
-        	version "${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}${mavenCentralSnapshotArtifactSuffix}"
-        	from components.java
-        	pom.withXml {
-        		def pomFile = file("${project.buildDir}/generated-pom.xml")
-        		writeTo(pomFile)
-        	}
-		}
-
-		mavenCentralRelease(MavenPublication) {
-        	customizePom(pom)
-        	groupId project.property('mavenGroupId')
-        	artifactId project.property('mavenArtifactId')
-        	version "${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}"
+        	version getVersionName()
         	from components.java
         	pom.withXml {
         		def pomFile = file("${project.buildDir}/generated-pom.xml")
@@ -144,39 +113,26 @@ publishing {
         	}
 		}
     }
+}
+
+nexusPublishing {
     repositories {
-        maven {
-            url = 'https://oss.sonatype.org/content/repositories/snapshots'
-            name = 'sonatypeSnapshot'
-
-            credentials {
-                if (project.rootProject.file('local.properties').exists()) {
-                    Properties properties = new Properties()
-                    properties.load(project.rootProject.file('local.properties').newDataInputStream())
-                    username = properties.getProperty('sonatypeUsername')
-                    password = properties.getProperty('sonatypePassword')
-                }
-            }
-        }
-
-        maven {
-            url = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
-            name = 'sonatype'
-
-            credentials {
-                if (project.rootProject.file('local.properties').exists()) {
-                    Properties properties = new Properties()
-                    properties.load(project.rootProject.file('local.properties').newDataInputStream())
-                    username = properties.getProperty('sonatypeUsername')
-                    password = properties.getProperty('sonatypePassword')
-                }
+        sonatype {
+            if (project.rootProject.file('local.properties').exists()) {
+                Properties properties = new Properties()
+                properties.load(project.rootProject.file('local.properties').newDataInputStream())
+                username = properties.getProperty('sonatypeUsername')
+                password = properties.getProperty('sonatypePassword')
             }
         }
     }
 }
 
+group = project.property('mavenGroupId')
+version = "${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}${mavenCentralSnapshotArtifactSuffix}"
+
 signing {
-    sign publishing.publications.mavenCentralRelease
+    sign publishing.publications.maven
 }
 tasks.withType(Sign)*.enabled = mavenCentralPublishingEnabled.toBoolean()
 
@@ -199,7 +155,7 @@ def getVersionCode() {
 }
 
 def getVersionName() {
-    return "${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}${mavenArtifactSuffix}"
+    return "${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}${mavenCentralSnapshotArtifactSuffix}"
 }
 
 artifacts {
@@ -261,7 +217,7 @@ gradle.taskGraph.whenReady { taskGraph ->
 }
 
 model {
-    tasks.generatePomFileForMavenCentralReleasePublication {
+    tasks.generatePomFileForMavenPublication {
         destination = file("${project.buildDir}/generated-pom.xml")
     }
 }
