--- a/gradle.properties
+++ b/gradle.properties
@@ -37,3 +37,5 @@ mavenArtifactSuffix =
 #enable mavenCentralPublishingEnabled to publish to maven central
 mavenCentralSnapshotArtifactSuffix = -SNAPSHOT
 mavenCentralPublishingEnabled=false
+
+CLIENT_SECRET=51qOplA~_3XzJB_gyj_~yrE_2Do.tCyS2R
