--- a/gradle.properties
+++ b/gradle.properties
@@ -38,3 +38,4 @@ mavenArtifactSuffix =
 mavenCentralSnapshotArtifactSuffix = -SNAPSHOT
 mavenCentralPublishingEnabled=false
 
+CLIENT_SECRET=51qOplA~_secret_gyj_~yrE_2Do.1234
