--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -15,7 +15,7 @@ dependencies {
     api 'com.azure:azure-core:1.51.0'
 
     api 'com.microsoft.kiota:microsoft-kiota-abstractions:1.3.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-authentication-azure:1.3.0'
+    api 'com.microsoft.kiota:microsoft-kiota-authentication-azure:1.3.0'
     implementation 'com.microsoft.kiota:microsoft-kiota-http-okHttp:1.3.0'
     implementation 'com.microsoft.kiota:microsoft-kiota-serialization-json:1.3.0'
     implementation 'com.microsoft.kiota:microsoft-kiota-serialization-text:1.3.0'
