--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -3,7 +3,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
-    testImplementation 'org.mockito:mockito-inline:5.2.0'
+    testImplementation 'org.mockito:mockito-core:5.13.0'
     testImplementation 'io.opentelemetry:opentelemetry-api:1.41.0'
     testImplementation 'io.opentelemetry:opentelemetry-context:1.41.0'
     testImplementation 'io.github.std-uritemplate:std-uritemplate:1.0.6'
