--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'jacoco'
     id 'com.github.spotbugs' version '6.2.0'
     id "org.sonarqube" version "6.2.0.5505"
+    // TODO remove this dependency once we remove the GH WF
     id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
 }
 
@@ -113,8 +114,15 @@ publishing {
         	}
 		}
     }
-}
 
+    repositories {
+        maven {
+            name = "ADO"
+            url = layout.buildDirectory.dir("publishing-repository")
+        }
+    }
+}
+// TODO remove this section once we remove the GH WF
 nexusPublishing {
     repositories {
         sonatype {
